# electricui-interval-sender

./: .gitignore  CMakeLists.txt  LICENSE  README.md  keywords.txt  library.properties
examples/automatic/: automatic.ino
examples/heartbeat_pause/: heartbeat_pause.ino
examples/hello-blink/: hello-blink.ino
examples/manual/: manual.ino
src/: interval_send.c  interval_send.h  interval_send_private.h
test/: project.yml
test/test/: test_interval_send.c
